--- a/Layout/GF/src/app/edit-profile/edit-profile.component.html
+++ b/Layout/GF/src/app/edit-profile/edit-profile.component.html
@@ -141,7 +141,7 @@
           <div class="row">
             <div class="col-sm-4"><b>Языки мероприятий:</b></div>
             <div class="col-sm-8">
-              <div class="btn-group-toggle" ngbRadioGroup name="radioBasic" [(ngModel)]="model">
+              <div class="btn-group-toggle" ngbRadioGroup name="radioBasic">
                 <label ngbButtonLabel class="btn btn btn-outline-bordered p-2 mb-2 mr-2 active">
                   <input ngbButton type="radio" value="ru" [value]="1"> Русский
                 </label>
