--- a/Layout/GF/src/app/profile/profile.component.html
+++ b/Layout/GF/src/app/profile/profile.component.html
@@ -1,4 +1,4 @@
-<div class="container-fluid mt-5">
+<div class="container-fluid mt-1">
   <div class="row">
     <div class="breadcrumbs  hidden-sm-down">
       <ul>
@@ -8,7 +8,7 @@
 
     </div>
     <div class="col-md-12 mb-5">
-      <h2>Иванов Иван Иванович <span class="titleButton">НЕ УДВЕЖДАНО</span></h2>
+      <h2><span style="vertical-align: sub;">Иванов Иван Иванович</span> <span class="titleButton">НЕ УДВЕЖДАНО</span></h2>
     </div>
   </div>
 
@@ -121,12 +121,12 @@
         <div class="card-body">
 
           <div class="row d-flex align-items-center flex-wrap mt-2">
-            <div class="col-sm-6"><div class="col-sm-12">
-                <img  class="foto" src="http://m.ngzt.ru/userfiles/picitem/img-20161122211923-780.jpg" >
+            <div class="col-md-6 col-12"><div class="col-sm-12">
+                <img  class="img-fluid" src="http://m.ngzt.ru/userfiles/picitem/img-20161122211923-780.jpg" >
             </div></div>
-            <div class="col-sm-6">
+            <div class="col-md-6 col-12">
               <div class=" col-sm-12">
-                <img  class="foto" src="https://cs9.pikabu.ru/post_img/big/2016/09/21/7/1474456259184250295.jpg" >
+                <img  class="img-fluid" src="https://cs9.pikabu.ru/post_img/big/2016/09/21/7/1474456259184250295.jpg" >
             </div>
             </div>
           </div>
