--- a/Layout/GF/src/app/edit/edit.component.html
+++ b/Layout/GF/src/app/edit/edit.component.html
@@ -13,7 +13,7 @@
             </div>
             <div class="col-lg-12">
                 <input type="text" class="form-control" id="inp" placeholder="{{today | date:'dd MMMM yyyy'}}"
-                       aria-describedby="basic-addon2" [(ngModel)]="model" ngbDatepicker #d="ngbDatepicker" (click)="d.toggle()">
+                       aria-describedby="basic-addon2" ngbDatepicker #d="ngbDatepicker" (click)="d.toggle()">
                 <label for="inp"><i class="material-icons">date_range</i></label>
             </div>
 
