--- a/Layout/GF/src/app/add-event/add-event.component.html
+++ b/Layout/GF/src/app/add-event/add-event.component.html
@@ -65,16 +65,8 @@
     <div class="col-sm-5">Максималное количество участников частное экскурсии<span
       style="color: red">&nbsp;*</span></div>
     <div class="col-sm-3">
-      <div class="form-group select-caret">
-        <select class="form-control">
-          <option>7</option>
-          <option>6</option>
-          <option>5</option>
-          <option>4</option>
-          <option>3</option>
-          <option>3</option>
-          <option>1</option>
-        </select>
+      <div class="form-group">
+        <input class="form-control">
       </div>
     </div>
   </div>
@@ -114,17 +106,8 @@
     <div class="col-sm-5">Минималное количество участников Груповое экскурсии<span
       style="color: red">&nbsp;*</span></div>
     <div class="col-sm-3">
-      <div class="form-group select-caret">
-        <select class="form-control" id="sel1">
-          <option>8</option>
-          <option>7</option>
-          <option>6</option>
-          <option>5</option>
-          <option>4</option>
-          <option>3</option>
-          <option>3</option>
-          <option>1</option>
-        </select>
+      <div class="form-group">
+        <input class="form-control">
       </div>
     </div>
   </div>
@@ -136,23 +119,8 @@
       style="color: red">&nbsp;*</span>
     </div>
     <div class="col-sm-3">
-      <div class="form-group select-caret">
-        <select class="form-control">
-          <option>14</option>
-          <option>13</option>
-          <option>12</option>
-          <option>11</option>
-          <option>10</option>
-          <option>9</option>
-          <option>8</option>
-          <option>7</option>
-          <option>6</option>
-          <option>5</option>
-          <option>4</option>
-          <option>3</option>
-          <option>3</option>
-          <option>1</option>
-        </select>
+      <div class="form-group">
+        <input class="form-control">
       </div>
     </div>
   </div>
@@ -163,16 +131,8 @@
       Количество дополнителний места групавой экскурсии<span style="color: red">&nbsp;*</span>
     </div>
     <div class="col-sm-3">
-      <div class="form-group select-caret">
-        <select class="form-control">
-          <option>7</option>
-          <option>6</option>
-          <option>5</option>
-          <option>4</option>
-          <option>3</option>
-          <option>3</option>
-          <option>1</option>
-        </select>
+      <div class="form-group">
+        <input class="form-control">
       </div>
     </div>
   </div>
@@ -223,16 +183,8 @@
     <div class="col-sm-5">Максималное количество участников сборное экскурсии<span
       style="color: red">&nbsp;*</span></div>
     <div class="col-sm-3">
-      <div class="form-group select-caret">
-        <select class="form-control">
-          <option>7</option>
-          <option>6</option>
-          <option>5</option>
-          <option>4</option>
-          <option>3</option>
-          <option>3</option>
-          <option>1</option>
-        </select>
+      <div class="form-group">
+        <input class="form-control">
       </div>
     </div>
   </div>
