--- a/Layout/GF/src/app/edit-profile/edit-profile.component.html
+++ b/Layout/GF/src/app/edit-profile/edit-profile.component.html
@@ -99,26 +99,16 @@
           <div class="row mt-2">
             <div class="col-sm-4"><b>Страна:</b><span style="color: red">&nbsp;*</span></div>
             <div class="col-sm-8">
-              <div class="form-group select-caret">
-                <select class="form-control">
-                  <option>1</option>
-                  <option>2</option>
-                  <option>3</option>
-                  <option>4</option>
-                </select>
+              <div class="form-group">
+                <input type="text" class="form-control">
               </div>
             </div>
           </div>
           <div class="row mt-2">
             <div class="col-sm-4"><b>Город:</b><span style="color: red">&nbsp;*</span></div>
             <div class="col-sm-8">
-              <div class="form-group select-caret">
-                <select class="form-control">
-                  <option>1</option>
-                  <option>2</option>
-                  <option>3</option>
-                  <option>4</option>
-                </select>
+              <div class="form-group">
+                <input type="text" class="form-control">
               </div>
             </div>
           </div>
@@ -253,14 +243,8 @@
           <div class="row mt-2">
             <div class="col-sm-4"><b>Город выдачи:</b></div>
             <div class="col-sm-8">
-              <div class="form-group select-caret">
-
-                <select class="form-control">
-                  <option>1</option>
-                  <option>2</option>
-                  <option>3</option>
-                  <option>4</option>
-                </select>
+              <div class="form-group">
+                <input type="text" class="form-control">
               </div>
             </div>
           </div>
