--- a/Layout/GF/src/styles.css
+++ b/Layout/GF/src/styles.css
@@ -693,7 +693,35 @@ a:hover {
 mat-dialog-container{
     display: inline-table !important;
 }
+.social {
+  padding-left: 0;
+  margin-top: 10px;
+}
 
+.social li {
+  display: inline-block;
+  list-style: none;
+  margin-right: 7px;
+}
+
+.social a {
+  color: #b0b0b0 !important;
+  background: #eeeeee;
+  width: 32px;
+  height: 32px;
+  display: block;
+  border-radius: 50%;
+  text-align: center;
+}
+.social a:hover {
+  background: #f47d89;
+  color: #ffffff !important;
+}
+
+.social a i {
+  font-size: 19px;
+  line-height: 1.7;
+}
 /*Large devices (desktops, 992px and up)*/
 @media (max-width: 992px) {
 
