--- a/Layout/GF/src/app/user-profile/user-profile.component.html
+++ b/Layout/GF/src/app/user-profile/user-profile.component.html
@@ -89,7 +89,7 @@
           <div class="row d-flex align-items-center flex-wrap mt-4">
             <div class="col-sm-4"><b>Социальные сети:</b></div>
             <div class="col-sm-8">
-              <ul class="social d-inline">
+              <ul class="profile social d-inline">
                 <li *ngFor="let item of user.socials"><a href="item.url"><i class="fa fa-{{item.name}}"></i></a></li>
               </ul>
             </div>
