--- a/Layout/GF/src/app/faq/faq.component.css
+++ b/Layout/GF/src/app/faq/faq.component.css
@@ -39,6 +39,19 @@ mat-accordion{
 .mat-expansion-panel:not(.mat-expanded) .mat-expansion-panel-header:not([aria-disabled=true]).cdk-keyboard-focused, .mat-expansion-panel:not(.mat-expanded) .mat-expansion-panel-header:not([aria-disabled=true]).cdk-program-focused, .mat-expansion-panel:not(.mat-expanded) .mat-expansion-panel-header:not([aria-disabled=true]):hover{
   background-color: transparent;
 }
+
+.faq-answers a{
+  color: black;
+  text-decoration: none;
+}
+.faq-answers a:hover{
+  color: #e7615c;
+}
+.faq-answers .card{
+  margin-left: 50px;
+  padding: 0px;
+  border: none;
+}
 @media screen and (max-width: 970px) {
   .faq-title {
     font-size: 20px;
@@ -67,5 +80,12 @@ mat-accordion{
     height: 18px;
     font-size:18px
   }
-
+}
+@media screen and (max-width: 992px) {
+  .faq-answers .card {
+    margin-left: inherit;
+  }
+  .faq-title span {
+    margin-bottom: 20px;
+  }
 }
