--- a/Layout/GF/src/styles.css
+++ b/Layout/GF/src/styles.css
@@ -283,6 +283,7 @@ a:visited {
 
 .mat_content_close::before {
     content: "-";
+    line-height: 0.8;
 }
 
 .mat-expansion-panel-header:hover .mat-content::before {
@@ -704,7 +705,7 @@ mat-dialog-container{
   margin-right: 7px;
 }
 
-.social a {
+.profile.social a {
   color: #b0b0b0 !important;
   background: #eeeeee;
   width: 32px;
@@ -713,14 +714,20 @@ mat-dialog-container{
   border-radius: 50%;
   text-align: center;
 }
-.social a:hover {
+.profile.social a:hover {
   background: #f47d89;
   color: #ffffff !important;
 }
 
-.social a i {
+.profile.social a i {
   font-size: 19px;
   line-height: 1.7;
+}
+.ngb-dp-month{
+  width: 100% !important;
+}
+ngb-datepicker.dropdown-menu{
+  width: 16rem !important;
 }
 /*Large devices (desktops, 992px and up)*/
 @media (max-width: 992px) {
