--- a/Layout/GF/src/app/account/account.component.html
+++ b/Layout/GF/src/app/account/account.component.html
@@ -81,7 +81,7 @@
 
     <div class="row text-center mt-3">
         <div class="col-lg-12">
-            <button class="btn btn-success btn-blue btn-w" type="button">Добавить мероприятия</button>
+            <button class="btn btn-success btn-blue btn-w" type="button" (click)="openEventChargetDialog()">Добавить мероприятия</button>
         </div>
 
     </div>
