--- a/Layout/GF/src/app/account/account.component.css
+++ b/Layout/GF/src/app/account/account.component.css
@@ -53,7 +53,10 @@ figure.item.item-event figcaption{
     box-shadow: 0 0 0 0.2rem rgba(88, 188, 179, 0.5);
     background-color: #3b857e !important;
 }
-
+.form-control {
+  font-size: 0.8rem;
+  line-height: 2;
+}
 .btn-w {
     width: 250px;
 }
