--- a/Layout/GF/src/app/profile/profile.component.css
+++ b/Layout/GF/src/app/profile/profile.component.css
@@ -81,6 +81,10 @@ h1{
   .titleButton{
     font-size: 10px;
     padding: 8px;
+    display: block;
+    width: 120px;
+    margin: auto;
+    margin-top: 10px;
   }
 
 }
