--- a/Layout/GF/src/app/booking/booking.component.css
+++ b/Layout/GF/src/app/booking/booking.component.css
@@ -421,8 +421,27 @@ i {
   }
 }
 @media (max-width: 480px){
+  .counter {
+    display: inline-block;
+    float: right;
+    margin-right: 5px;
+  }
   .counter > input{
-    width: 28px;
+    width: 25px;
+    height: 25px !important;
+    box-shadow: none;
+    vertical-align: bottom;
+    border-radius: 0;
+  }
+  .counter > input[type=text] {
+    font-size: 12px;
+  }
+  .helpers {
+    font-size: 12px;
+  }
+  .btn.p-3 {
+    padding: 0.3rem 0.8rem !important;
+    font-size: 14px;
   }
   .counter > input[type=text]{
     width: 30px;
@@ -438,5 +457,11 @@ i {
   }
   .filters b{
     font-size: 12px;
+  }
+  .filters .col-4{
+    padding-right: 5px !important;
+  }
+  .filters .col-8{
+    padding-left: 5px !important;
   }
 }
