--- a/Layout/GF/src/app/account/account.component.html
+++ b/Layout/GF/src/app/account/account.component.html
@@ -71,7 +71,7 @@
                             </small>
                         </div>
                         <div class="pt-3 text-center">
-                            <button class="btn btn-success btn-blue" type="button">Опубликовано</button>
+                            <div class="status-label green">Опубликовано</div>
                         </div>
                     </div>
                 </owl-carousel>
