--- a/Layout/GF/src/app/app-inline-navbar/app-inline-navbar.component.html
+++ b/Layout/GF/src/app/app-inline-navbar/app-inline-navbar.component.html
@@ -60,7 +60,7 @@
                               <div class="d-inline-block" ngbDropdown #myDrop="ngbDropdown">
                                 <a href="javascript:void(0)" class="nav-link drop" id="dropdownManual" ngbDropdownToggle>
                                   <img src="../../assets/img/download.png" alt="">
-                                  Наташа Ветлицкая
+                                  <span class="fullanme">Наташа Ветлицкая</span>
                                 </a>
                                 <div ngbDropdownMenu aria-labelledby="dropdownManual">
                                   <a class="dropdown-item">Профиль</a>
